Added bash verbosity to understand the kublete startup problem. Re-added brctl hackery.

--- a/master.yml
+++ b/master.yml
@@ -33,7 +33,7 @@ coreos:
         Wants=download-kubernetes-master.service
 
         [Service]
-        ExecStart=/bin/bash -c "exec /opt/bin/apiserver \
+        ExecStart=/bin/bash -xc "exec /opt/bin/apiserver \
         --address=0.0.0.0 \
         --port=8080 \
         --etcd_servers=http://127.0.0.1:4001 \
