--- a/minion.yml
+++ b/minion.yml
@@ -42,8 +42,8 @@
 
         [Service]
         EnvironmentFile=/run/rudder/subnet.env
-        ExecStartPre=-/usr/bin/ip link set dev docker0 down ; /usr/bin/true
-        ExecStartPre=-/usr/sbin/brctl delbr docker0 ; /usr/bin/true
+        ExecStartPre=-/usr/bin/ip link set dev docker0 down
+        ExecStartPre=-/usr/sbin/brctl delbr docker0
         ExecStart=/usr/bin/docker -d -s=btrfs -H fd:// --bip=${RUDDER_SUBNET} --mtu=${RUDDER_MTU}
         Restart=on-failure
         TimeoutSec=10
