--- a/libswarm.yml
+++ b/libswarm.yml
@@ -21,7 +21,7 @@
         [Service]
         ExecStartPre=/usr/bin/mkdir -p /run/libswarm
         ExecStartPre=/bin/bash -c '/usr/bin/echo "#!/bin/bash" > /run/libswarm/script'
-        ExecStartPre=/bin/bash -c "echo exec /opt/libswarm/bin/swarmd $( (echo dockerserver tcp://localhost:4243 ; echo debug; /usr/bin/fleetctl list-machines -fields=ip -full -no-legend | xargs -l1 -i% echo dockerclient tcp://%:2375 ) | xargs -l1 -i% echo \\\'%\\\' ) >> /run/libswarm/script"
+        ExecStartPre=/bin/bash -c "echo exec /opt/libswarm/bin/swarmd $( (echo dockerserver tcp://0.0.0.0:4243 ; echo debug; /usr/bin/fleetctl list-machines -fields=ip -full -no-legend | xargs -l1 -i% echo dockerclient tcp://%:2375 ) | xargs -l1 -i% echo \\\'%\\\' ) >> /run/libswarm/script"
         ExecStartPre=/usr/bin/chmod +x /run/libswarm/script
         ExecStartPre=-/usr/bin/systemctl start docker-rudder
         ExecStart=/run/libswarm/script
