Rename of reference from rudder to flannel, per some silly copyright problem

--- a/kubernetes-minion.yml
+++ b/kubernetes-minion.yml
@@ -45,7 +45,7 @@
         [Unit]
         After=etcd.service
         After=download-kubernetes.service
-        After=docker-rudder.service
+        After=docker-flannel.service
         ConditionFileIsExecutable=/opt/bin/kubelet
         Description=Kubernetes Kubelet
         Documentation=https://github.com/GoogleCloudPlatform/kubernetes
